src/z80asm/z80asm2/t/30-directive/expected/incbin_21.txt
% z88dk-z80asm -v -dump-after-directives t/30-directive//input/incbin_21.asm
Assembling t/30-directive/input/incbin_21.asm...
t/30-directive/input/incbin_21.asm:1:7: error: Expected filename after BINARY
    incbin ; no input file
          ^
